[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/ui/FactionUI.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/main_font_bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/main_font.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=1]
contentent_margin_left = 10
contentent_margin_right = 10
contentent_margin_top = 10
contentent_margin_bottom = 10
bg_color = Color( 0.12, 0.12, 0.12, 0.9 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.3, 0.3, 0.3, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
contentent_margin_left = 10
contentent_margin_right = 10
contentent_margin_top = 10
contentent_margin_bottom = 10
bg_color = Color( 0.15, 0.15, 0.15, 0.9 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.4, 0.4, 0.4, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0.2 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.4, 0.4, 0.4, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="FactionUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 914.0
margin_bottom = 490.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 904.0
margin_bottom = 480.0
custom_constants/separation = 15

[node name="TitleLabel" type="Label"]
margin_right = 894.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 3 )
text = "FACCIONES"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator"]
margin_top = 45.0
margin_right = 894.0
margin_bottom = 49.0

[node name="HBoxContainer" type="HBoxContainer"]
margin_top = 64.0
margin_right = 894.0
margin_bottom = 470.0
size_flags_vertical = 3
custom_constants/separation = 20

[node name="FactionList" type="ItemList"]
margin_right = 250.0
margin_bottom = 406.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 3

[node name="DetailsPanel" type="PanelContainer"]
margin_left = 270.0
margin_right = 894.0
margin_bottom = 406.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 614.0
margin_bottom = 396.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 604.0
margin_bottom = 386.0
custom_constants/separation = 15

[node name="IconContainer" type="HBoxContainer"]
margin_right = 594.0
margin_bottom = 64.0

[node name="FactionIcon" type="TextureRect"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
expand = true
stretch_mode = 6

[node name="NameLabel" type="Label"]
margin_left = 68.0
margin_top = 17.0
margin_right = 594.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Nombre de la Facción"
valign = 1

[node name="HSeparator" type="HSeparator"]
margin_top = 79.0
margin_right = 594.0
margin_bottom = 83.0

[node name="StatusContainer" type="HBoxContainer"]
margin_top = 98.0
margin_right = 594.0
margin_bottom = 122.0

[node name="Label" type="Label"]
margin_right = 297.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Estado:"

[node name="StatusLabel" type="Label"]
margin_left = 301.0
margin_right = 594.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Neutral"
align = 2

[node name="ReputationContainer" type="HBoxContainer"]
margin_top = 137.0
margin_right = 594.0
margin_bottom = 161.0

[node name="Label" type="Label"]
margin_right = 100.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
text = "Reputación:"

[node name="ReputationBar" type="ProgressBar"]
margin_left = 104.0
margin_right = 554.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_styles/bg = SubResource( 3 )
value = 50.0
percent_visible = false

[node name="ValueLabel" type="Label"]
margin_left = 558.0
margin_right = 594.0
margin_bottom = 24.0
rect_min_size = Vector2( 36, 0 )
text = "0"
align = 2

[node name="LeaderContainer" type="HBoxContainer"]
margin_top = 176.0
margin_right = 594.0
margin_bottom = 200.0

[node name="Label" type="Label"]
margin_right = 297.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Líder:"

[node name="LeaderLabel" type="Label"]
margin_left = 301.0
margin_right = 594.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Desconocido"
align = 2

[node name="HeadquartersContainer" type="HBoxContainer"]
margin_top = 215.0
margin_right = 594.0
margin_bottom = 239.0

[node name="Label" type="Label"]
margin_right = 297.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Sede:"

[node name="HeadquartersLabel" type="Label"]
margin_left = 301.0
margin_right = 594.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Desconocida"
align = 2

[node name="HSeparator2" type="HSeparator"]
margin_top = 254.0
margin_right = 594.0
margin_bottom = 258.0

[node name="DescriptionLabel" type="RichTextLabel"]
margin_top = 273.0
margin_right = 594.0
margin_bottom = 323.0
rect_min_size = Vector2( 0, 50 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "Descripción de la facción..."
text = "Descripción de la facción..."

[node name="QuestsContainer" type="VBoxContainer"]
margin_top = 338.0
margin_right = 594.0
margin_bottom = 376.0

[node name="Label" type="Label"]
margin_right = 594.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
text = "Misiones Disponibles"

[node name="QuestsList" type="VBoxContainer"]
margin_top = 28.0
margin_right = 594.0
margin_bottom = 38.0
custom_constants/separation = 10

[node name="CloseButton" type="Button"]
margin_left = 824.0
margin_top = 10.0
margin_right = 904.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 30 )
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Cerrar"

[connection signal="pressed" from="CloseButton" to="." method="hide_ui"]